--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node dist/server.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm install && nodemon --watch src/**/*.ts --exec ts-node src/server.ts"
+    "dev": "nodemon --watch src/**/*.ts --exec ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
